+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.2 Alpha 1?
=================================

*Release date: XX-XXX-XXX*

Core and Builtins
-----------------

- Issue #8969: On Windows, use mbcs codec in strict mode to encode and decode
  filenames and enable os.fsencode().

- Issue #8941: decoding big endian UTF-32 data in UCS-2 builds could crash
  the interpreter with characters outside the Basic Multilingual Plane
  (higher than 0x10000).

- Issue #8950: (See also issue #5080).  Py_ArgParse*() functions now
  raise TypeError instead of giving a DeprecationWarning when a float
  is parsed using the 'L' code (for long long).  (All other integer
  codes already raise TypeError in this case.)

- Issue #8922: Normalize the encoding name in PyUnicode_AsEncodedString() to
  enable shortcuts for upper case encoding name. Add also a shortcut for
  "iso-8859-1" in PyUnicode_AsEncodedString() and PyUnicode_Decode().

- Issue #8838: Remove codecs.charbuffer_encode() function. The buffer protocol
  doesn't support "char buffer" anymore in Python3.

- Issue #8339: Remove "t#" format of PyArg_Parse*() functions, use "s#" or "s*"
  instead. codecs.charbuffer_encode() now accepts modifiable buffer objects
  like bytearray.

- Issue #8837: Remove "O?" format of PyArg_Parse*() functions. The format is no
  used anymore and it was never documented.

- In the str.format(), raise a ValueError when indexes to arguments are too
  large.

- Issue #2844: Make int('42', n) consistently raise ValueError for
  invalid integers n (including n = -909).

- Issue #8188: Introduce a new scheme for computing hashes of numbers
  (instances of int, float, complex, decimal.Decimal and
  fractions.Fraction) that makes it easy to maintain the invariant
  that hash(x) == hash(y) whenever x and y have equal value.

- Issue #8748: Fix two issues with comparisons between complex and integer